--- a/product/ux/technical-writing/index.html.md.erb
+++ b/product/ux/technical-writing/index.html.md.erb
@@ -245,6 +245,7 @@ The number of pages in the four primary repositories (GitLab, Omnibus, Charts, a
 | Jan 2022      | 1,562      |
 | June 2022     | 1,633      |
 | Sept 2022     | 1,785      |
+| Dec 2022      | 1,840      |
 
 The number of words in these repositories:
 
@@ -254,6 +255,7 @@ The number of words in these repositories:
 | Jan 2022      | 2,017,183  |
 | June 2022     | 2,166,052  |
 | Oct 2022      | 2,271,350  |
+| Dec 2022      | 2,397,335  |
 
 ## Technical Writer PTO
 
