Recommendation to now use 1Password for SSH & Git

--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -488,7 +488,7 @@ first.
 
 Starting with version 8, 1Password can operate as the single source of truth for your SSH keys. This includes generating private keys, storing them securely, filling your public keys in to sites like GitLab.com, and unlocking the keys automatically when performing git operations.
 
-More information is available [in the official documentation](https://developer.1password.com/docs/ssh/).
+More information is available [in the official documentation](https://developer.1password.com/docs/ssh/) and see the [blog post](https://blog.1password.com/1password-ssh-agent/) from 1Password.
 
 #### CLI integration
 
