--- a/infrastructure/team/reliability/index.html.md.erb
+++ b/infrastructure/team/reliability/index.html.md.erb
@@ -62,6 +62,8 @@ We maintain a single source of truth epic for all work underway for the Reliabil
 
  * Addresses [Infrastructure Corrective Actions](https://gitlab.com/groups/gitlab-com/gl-infra/-/boards/1181205?label_name[]=corrective%20action) as required
  * Works on [priortized issues](https://about.gitlab.com/handbook/engineering/infrastructure/team/reliability/issues.html#issue-priority) from the [Reliability General Backlog](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3993753?not%5Blabel_name%5D%5B%5D=squad%3A%3A*&assignee_id=None)
+ * Updates Infrastructure metrics as part of the [Engineering Allocation Process](https://about.gitlab.com/handbook/engineering/#engineering-allocation).
+    * This is the responsibility of the General Squad Engineering Manager within Reliability to update these metrics each week or arrange for someone else to cover when out-of-office.
 
 ##### Observability Squad
 
