Update job_families directory for people-group

--- a/job-families/people-group/index.html.md.erb
+++ b/job-families/people-group/index.html.md.erb
@@ -1,8 +1,8 @@
 ---
 layout: markdown_page
-title: "People Ops Roles"
+title: "People Group Roles"
 ---
 
-## People Ops Roles
+## People Group Roles
 
-<%= job_families('people-ops') %>
+<%= job_families('people-group') %>
