Change link to gDrive search per best practices

--- a/cto-staff/index.html.md.erb
+++ b/cto-staff/index.html.md.erb
@@ -15,7 +15,7 @@ The Engineering All-Hands meeting happens monthly on alternating time slots in p
 
 The purpose is to share company updates, stay connected, and receive feedback.
 
-The entire Engineering group is invited, though anyone at GitLab is welcome to attend and contribute to [the All-Hands agenda](https://docs.google.com/document/d/1rxU8btp15LyI4BYcW2SzjorJVxcWmK2yPYgxDcHhq38/edit#) (internal). As with all general meetings at GitLab, attendance is optional though encouraged, and will be recorded.
+The entire Engineering group is invited, though anyone at GitLab is welcome to attend and contribute to [the All-Hands agenda](https://drive.google.com/drive/search?q=engineering%20all%20hands%20agenda) (internal). As with all general meetings at GitLab, attendance is optional though encouraged, and will be recorded.
 
 ## Engineering Offsite
 
