--- a/product/product-leadership/index.html.md.erb
+++ b/product/product-leadership/index.html.md.erb
@@ -60,13 +60,18 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2022-10-18 | Taylor McCaslin | [Issue 4912](https://gitlab.com/gitlab-com/Product/-/issues/4912) |
 | 2022-11-10 | Joshua Lambert | [Issue 5026](https://gitlab.com/gitlab-com/Product/-/issues/5026) |
 | 2022-12-14 | Omar Fernandez | [Issue 5164](https://gitlab.com/gitlab-com/Product/-/issues/5164) |
-| 2023-01-?? | TBD | TBD | 
-| 2023-02-?? | TBD | TBD |
-| 2023-03-?? | TBD | TBD |
-| 2023-04-?? | TBD | TBD |
-| 2023-05-?? | TBD | TBD |
-| 2023-06-?? | TBD | TBD |
-| 2023-07-?? | TBD | TBD |
+| 2023-01-24 | Orit Golowinski (Dev) | TBD | 
+| 2023-02-28 | Jackie Porter (Ops) | TBD |
+| 2023-03-22 | Hillary Benson (Sec) | TBD |
+| 2023-04-13 | Joshua Lambert (Enablement) | TBD |
+| 2023-05-23 | Omar Fernandez (Fulfillment) | TBD |
+| 2023-06-20 | Orit Golowinski (Dev) | TBD |
+| 2023-07-12 | Jackie Porter (Ops) | TBD |
+| 2023-08-23 | Hillary Benson (Sec) | TBD |
+| 2023-09-21 | Joshua Lambert (Enablement)| TBD |
+| 2023-10-11 | Omar Fernandez (Fulfillment) | TBD |
+| 2023-11-09 | Orit Golowinski (Dev) | TBD |
+| 2023-12-13 | Jackie Porter (Ops)| TBD |
 
 
 ## Product Section Leaders Performance Indicator Rotation
