Update epic status update expectations

--- a/infrastructure/team/delivery/index.html.md.erb
+++ b/infrastructure/team/delivery/index.html.md.erb
@@ -223,7 +223,7 @@ Working epic should always have:
 1. [Directly responsible individuals][DRI] responsible for the project completion.
 1. Defined exit criteria
 1. Issue admin section to provide the issue priority, labels and epic for quick actions. [Example](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/273#issue-template).
-1. Status YYYY-MM-DD to indicate what is being worked on, why, and planned next steps. The DRI is responsible for updating the epic status each week. Note, this must be the last heading in the epic to support automated epic summary updates
+1. Status YYYY-MM-DD to indicate what is being worked on, why, and planned next steps. The DRI is responsible for updating the epic status every Wednesday. Note, this must be the last heading in the epic to support automated epic summary updates
 1. Start date and estimated due date
 1. Labels: 
     * ![Delivery Group label](img/group-delivery-label.png)
