--- a/infrastructure/team/gitlab-dedicated/index.html.md.erb
+++ b/infrastructure/team/gitlab-dedicated/index.html.md.erb
@@ -76,6 +76,14 @@ When it comes to escalating customer support issues, we follow the same definiti
  
 ## How we work
 
+GitLab Dedicated is highly visible within GitLab and the broader market. It is also complex service offering. Consequently, the Dedicated team needs to manage its own work and stakeholder expectations - both external and internal. The following sections describe processes and tools that the team has adopted to work efficiently and effectively.
+
+These processes matter because they provide a clear way to understand the state of the product and ongoing work as well as enable team members to fulfill their role. 
+
+A main goal in designing these processes is to make it possible for every team member working on any part of GitLab Dedicated to understand **why** their work matters and how it contributes to customer results. 
+
+It is critical that the following processes are understood by all team members and that we hold ourselves accountable. 
+
 ### Meetings and Scheduled Calls
 
 Our preference is to work asynchronously, within our project issue tracker as described in [the project management section](#project-management).
@@ -86,8 +94,6 @@ The team does have a set of regular synchronous calls:
 * `Team call` - During this call, we are sharing important information for team-members day-to-day, as well as project items requiring a sync discussion
 * 1-1s between the Individual Contributors and Engineering Manager
 
-
-
 Impromptu Zoom meetings for discussing GitLab Dedicated work between individuals are created as needed.
 It is expected that these meetings are private streamed, or recorded(1*), and then uploaded to [GitLab Unfiltered playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KqC5FfUVPyndvLvTWifWbfB).
 The outcome of the call is shared in a persistent location (Slack is not persistent). This is especially important as the team grows, because any decisions that are made in the early stage have will be questioned in the later stages when the team is larger.
@@ -96,73 +102,78 @@ The outcome of the call is shared in a persistent location (Slack is not persist
 
 ### Project Management
 
-We use Epics, Issues, and Issue Boards to organize our work, as they complement each other.
+We use epics, issues, and issue/epic boards to organize our work, as they complement each other.
 
-The single source of truth for _all_ GitLab Dedicated work across different functions is [GitLab Dedicated epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/479).
+The single source of truth for _all_ GitLab Dedicated work across different functions is the top-level [GitLab Dedicated epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/479). 
 
-The single source of truth for engineering work required for GitLab Dedicated is [GitLab Dedicated Implementation Epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/481). This is considered to be a top-level epic for all of the implementation work, and will be referenced as such.
+The [GitLab Dedicated epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/479) contains a section that tracks the status all ongoing work. The tracker also references cross-functional initiatives that happen outside of R&D. The status is maintained in the description of the top-level epic so that it is visible at a glance. This is auto-generated using [the epic issues summary project](https://gitlab.com/gitlab-com/gl-infra/epic-issue-summaries).
 
-Epics that are added as children to the top-level epic are used to describe projects that the team undertakes.
+The [GitLab Dedicated Limited Availability sub-epic](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/484) contains all projects relating to meeting requirements for exiting Limited Availability. All epics that are added as children of this Limited Availability (LA) top-level epic are used to describe projects that the team undertakes during the LA period. These child epics are prioritized in line with [the Roadmap to exit Limited Availability](https://about.gitlab.com/direction/saas-platforms/dedicated/#limited-availability-roadmap)
 
-Having all projects at this level allows us to use a single list for prioritization and enables us to prioritize
-work for different services alongside each other. Projects are prioritized in line with [the Roadmap](https://gitlab.com/gitlab-com/gl-infra/gitlab-dedicated/team/-/blob/main/Roadmap.md) and the needs of each individual milestone defined in the Implementation Plan.
-
-Project status is maintained in the description of the top-level epic so that it is visible at a glance. This is auto-generated using [the epic issues summary project](https://gitlab.com/gitlab-com/gl-infra/epic-issue-summaries).
-
-Example organization for engineering work is shown on the diagram below:
+The diagram below shows an example of traversing the complete hierachy:
 
 ```mermaid
 graph TD
-A(GitLab Dedicated) --> C[Implementation Plan]
-C --> D([Alpha])
-C --> E([Beta])
-C --> F([Limited Availability])
-C --> G([General Availability])
-
-
-%% Alpha
-D --> I[Phase1]
-D --> M[Phase2]
-
-I --> J[Provision using GET]
-I --> K[Provision Observability stack]
-I --> L[Provision accounts]
-
-
-
+A(GitLab Dedicated) --> C(GitLab Dedicated Limited Availability)
+C --> D([Enhance Dedicated security posture])
+C --> E([Switchboard App MVC])
+C --> F([Establish Availability targets])
+C --> G([...])
+E --> H([Issue 1])
+E --> I([Issue 2])
+E --> J([...])
 click A "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/479"
-click C "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/481"
-click D "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/483"
-click E "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/495"
-click F "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/484"
-click G "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/485"
+click C "https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/484"
+click D "https://gitlab.com/groups/gitlab-com/gl-infra/gitlab-dedicated/-/epics/60"
+click E "https://gitlab.com/groups/gitlab-com/gl-infra/gitlab-dedicated/-/epics/54"
+click F "https://gitlab.com/groups/gitlab-com/gl-infra/gitlab-dedicated/-/epics/55"
 ```
 
 _Note_ If you are not seeing the diagram, make sure that you have accepted all cookies.
 
-#### Project Ownership
+#### Epic ownership
 
-Each project has an owner who is responsible for delivering the project.
+Each epic has a single DRI who is responsible for delivering the project.
 
-The owner needs to:
+The DRI needs to:
 
-1. Update the status block in the epic description each week.
-1. Work with others to move project issues through the boards.
+1. Update the status block in the epic description
+1. Work with others to move issues through the boards
 
-#### Project Structure
+#### Epic structure
 
-The epic for the project must have the following items:
+Each epic and child epics must include the following:
 
-1. **Background**, including a problem statement, to provide context for people looking to understand the project.
-1. **Exit criteria** for the specific goals of the project.
-    1. These are created as issues with the `exit criterion` label in the epic and are linked in the description.
-    1. We create these at the start of the project to allow us to keep focused on our goal, and use [blocking issues](https://docs.gitlab.com/ee/user/project/issues/related_issues.html) to indicate the state of each exit criterion.
+**Description** (TBD make epic template)
+1. **DRI** who is responsible for this epic.
+1. **Background**, including a problem statement, to provide context for people looking to understand the epic.
+1. **Exit criteria** for the specific goals of the epic.
 1. **Status yyyy-mm-dd** should be the final heading in the description.
     1. This enables others who are interested in the epic to see the latest status without having to read through all comments or issues attached to the epic.
     1. This heading is used to auto-generate the status information on the top-level epic.
+
+**Epic meta data**
 1. **Start date** is set to the expected start date, and updated to be the actual start date when the project begins.
 1. **Due date** is set to be the expected end date.
-    1. This should be seen as a target, and this target is re-evaluated every few weeks while the project is in progress. The date that a project actually ended is taken from the date that the epic was closed.
+    1. The due date is set based on [the Roadmap to exit Limited Availability](https://about.gitlab.com/direction/saas-platforms/dedicated/#limited-availability-roadmap)
+    1. The date that a project actually ended is taken from the date that the epic was closed.
+
+Labels are described in the [epic label section](#epic-labels).
+
+#### Epic boards
+
+Epic boards are used to track the overall status of epics. We use the following epic boards:
+
+1. TBD All epics labeled `team::GitLab Dedicated` with lanes set to scoped `worfklow-infra` labels
+   1. This board allows a complete overview of the entire epic backlog
+1. TBD All epics labeled `team::GitLab Dedicated` with lanes set to scoped `Dedicated LA::phase*` labels
+   1. This board is a visualization of the [the Roadmap to exit Limited Availability](https://about.gitlab.com/direction/saas-platforms/dedicated/#limited-availability-roadmap)
+1. TBD All epics `team::GitLab Dedicated` and `workflow-infra::in progress` with lanes set to scoped `health` labels
+   1. This board highlights any risks with work in progress items.
+
+#### Epic roadmap
+
+All epics and sub-epics are set with due dates according to the [the Roadmap to exit Limited Availability](https://about.gitlab.com/direction/saas-platforms/dedicated/#limited-availability-roadmap).
 
 ### Issue boards
 
@@ -232,6 +243,15 @@ Commonly used labels are:
 1. Scoped `Launch` labels.
 
 The `team::GitLab Dedicated` label is used in order to allow for easier filtering of issues applicable to the team that have group level labels applied.
+
+#### Epics labels
+
+Epics and child epics should contain the following labels:
+
+1. A scoped label indicating the phase of the roadmap in which the epic is scheduled to be delivered epic e.g. `Dedicated LA::Phase2`
+1. A scoped `workflow-infra` label
+1. All relevant GitLab Dedicated team labels
+1. If the epic is labeled `workflow-infra::in progress`, then a health status label should be applied. (`health::on track`, `health::needs attention`, `health:at risk` by the epic DRI. This label is regularly updated as part of status updates.)
 
 #### Workflow labels
 
