New dashboards and insights

--- a/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
+++ b/product/product-analysis/dashboards-analysis-insights/index.html.md.erb
@@ -36,6 +36,11 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Usage PQL Analysis](https://app.periscopedata.com/app/gitlab:safe-dashboard/926643/Growth:Conversion-Usage-PQL-Analysis) |  |  | Y |
 | [User Attributes Relationship to Paid Conversion](https://app.periscopedata.com/app/gitlab:safe-dashboard/1052091/User-Attributes-Relationship-to-Paid-Conversion) | A broad analysis of user attributes identifiable upon Gitlab.com registration and their relationship to paid conversion. | FY23 Q3 | Y |
 | [Growth Metrics](https://app.periscopedata.com/app/gitlab:safe-dashboard/1067009/Growth-Metrics) | Describes and illustrates the Growth team's most important metrics and performance indicators. | Ongoing | Y |
+| [GMAU Churn Analysis](https://app.periscopedata.com/app/gitlab/1088141/GMAU-Churn-Analysis-Dashboard)|A step-by-step tool for identifying reported GMAU trends.| FY23 Q4 | N |
+| [Feature Retention 2.0](https://app.periscopedata.com/app/gitlab/1003214/Feature-Retention) | View event-level adoption and retention for SaaS and Self-Managed.| FY23 Q4 | N |
+| [GMAU Crossover](https://app.periscopedata.com/app/gitlab/1061102/GMAU-Crossover) | To provide visibility into how GMAUs may be impacted by the use of other GMAUs.| FY23 Q3 | N |
+| [Time to First Adoption](https://app.periscopedata.com/app/gitlab/1088268/Time-to-First-Adoption)| By plan-level, see the days till inital adoption of all SaaS events.| FY23 Q4 | N |
+
 
 
 ### Analysis & Insights
@@ -51,3 +56,4 @@ Please see the chart below ([or follow this link](https://app.periscopedata.com/
 | [Verify Usage Patterns for Legitimate users & Malicious Users](https://gitlab.com/gitlab-data/product-analytics/-/issues/656#note_1092057211) | Study of initial concurrent pipeline & job usage among free accounts to determine benchmarks between legitimate and malicious users | FY23 Q3 | 
 | [Quality SaaS Signup Metric 2022](https://docs.google.com/presentation/d/1xHBrnvwdMxQGqmX0TtcQz5tUYsAeU6CAMnpcDlhHUpc/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to narrow down to a subset of the Gitlab.com user population with a higher likelihood of converting to paid. | FY23 Q3 | 
 | [SaaS Team Activation Metric 2022](https://docs.google.com/presentation/d/1rJG8FaqEjfgA-Nz9Ww3blgcUwRGzri7CeKkn1e2eEHY/edit?usp=sharing) | Covers the development of a Growth and Marketing metric used to identify team actions performed in the 1st 14 days that are predictive of paid conversion and retention. | FY23 Q4 | 
+| [Delayed Value Analysis](https://gitlab.com/gitlab-data/product-analytics/-/issues/781#note_1153295255) | Studies key feature usage among Trial-to-Paid conversions and presents how trial feature adoption expedites paid feature adoption.| FY23 Q4 |
