Add documentation to implementation plan

--- a/development/sec/govern/compliance/_plan.erb
+++ b/development/sec/govern/compliance/_plan.erb
@@ -29,6 +29,12 @@ The following is an example of an implementation approach from [https://gitlab.c
 1. Create new Vue app to render the contents of the section
 1. Create new setting and submission process to save the value
 1. Tests tests and more tests :muscle:
+
+~documentation
+
+1. Update docs page eg https://docs.gitlab.com/ee/administration/audit_events.html
+1. Update the GraphQL examples https://gitlab.com/gitlab-org/govern/compliance/graphql-example-requests
+
 ```
 
 The [DRI](/handbook/people-group/directly-responsible-individuals/) is **highly** recommended to ping a relevant counterpart or domain expert if an issue covers multiple
