Update index.html.md.erb with holiday get together

--- a/development/dev/manage/index.html.md.erb
+++ b/development/dev/manage/index.html.md.erb
@@ -196,6 +196,22 @@ This section lists relevant experience areas for individual contributors interes
 
 For an explanation on what to expect as a Staff engineer and a list of ideas for tactical initaitives, [visit this page](/handbook/engineering/development/dev/manage/staff-engineers).
 
+
+## Virtual Holiday Get Together (2022)
+
+For this holiday season, we are planning to have 2 virtual get togethers (optional attendance) on the 16th Dec 2022 catering to APAC/EMEA and NA timezones across Manage stage. You are welcome to join either of the 1hr sessions for a virtual scavenger hunt (or a game like 2 truths and a lie). Additionally we have a holiday budget for upto 100 USD that you can use to order your favourite local bite ahead of the get together.  
+- The event invites will go out the week of 12th Dec 
+- You can [expense the meal using Expensify](/handbook/finance/expenses/#-year-end-holiday-party-budget)
+### Session details
+
+Slack: #s_manage_team-day
+
+| Region | Time | Facilitator |
+| -----  | ---- | ----  |
+| APAC   | 2022-12-16 04:00 UTC | @m_gill |
+| EMEA   | 2022-12-16 12:00 UTC | @mksionek | 
+| AMER   | 2022-12-16 18:00 UTC | @adil.farrukh |
+
 ## Meetings
 
 Although we have a bias for asynchronous communication, synchronous meetings are necessary and should adhere to our [communication guidelines](/handbook/communication/#video-calls). Some regular meetings that take place in Manage are:
