--- a/product/product-okrs/previous-quarters/index.html.md.erb
+++ b/product/product-okrs/previous-quarters/index.html.md.erb
@@ -10,6 +10,54 @@ title: Previous Quarter OKR Timelines
 
 <%= partial("handbook/product/product-handbook-links") %>
 
+## FY23 Q3
+
+- Incorporates [FY23-Q2 learnings](https://gitlab.com/gitlab-com/Product/-/issues/3892)
+- [FY23-Q3 feedback issue](https://gitlab.com/gitlab-com/Product/-/issues/4296)
+
+#### OKR Kick-off by the Product and Engineering Leadership Teams
+
+- **8 weeks** prior to the start of the fiscal quarter, the Product Leadership Team drafts initial OKRs aligned to the [annual product investment themes](https://about.gitlab.com/direction/#fy23-product-investment-themes). Product Operations will lead this effort with the  [FY23 Q3 PLT OKR Pre-planning issue](https://gitlab.com/gitlab-com/Product/-/issues/4363 ) in preparation for Shared R&D OKR planning with Engineering.
+- **6 weeks** prior to the start of the fiscal quarter, the VP of Product and the CTO begin alignment on potential Shared R&D OKRs to recommend to the CEO. Product Operations will work with the CTO to schedule these meetings and include cross-functional team members as needed. Please reference the agenda docs and video recording below to follow these meetings:
+     1. Shared R&D Objectives for OKRs - session 1
+          - Goal: Cross-functional leaders discuss OKR ideas for CEO’s top-down OKR draft
+          - [Agenda](https://docs.google.com/document/d/1_BY9U0Fdin0Qke8UvmEJjGPDsNV-NXYW840wLjlpEsY/edit#)
+          - Product Operations will schedule this meeting at least 6 weeks prior to quarter start.
+     2. CTO and VPP discuss Shared R&D OKRs 1:1
+          - Goal: VPP and CTO review align on top OKR ideas coming out of session 1
+          - Product Operations will add this to their 1:1 agenda following session 1 or schedule a unique meeting as needed to ensure it happens within a week of session 1
+     3. Shared R&D Objectives for OKRs - session 2
+          - Goal: Cross-functional leaders finalize OKR ideas for CEO's top-down OKR draft
+          - [Agenda](https://docs.google.com/document/d/1_BY9U0Fdin0Qke8UvmEJjGPDsNV-NXYW840wLjlpEsY/edit#)
+          - Product Operations will ensure this meeting gets scheduled one week after session 1.
+- **5 weeks** prior to the start of the fiscal quarter, the CEO and Chief of Staff to the CEO initiate the OKR process. The CEO will share an MR in the #e-group Slack channel with the 3 Company Objectives for the quarter, and one to three Key Results for each objective. 
+-  **4 weeks** prior to the start of the new quarter:
+     - Product Operations adds the aligned upon Shared R&D OKRs plus any additional Product organization specific OKRs to [FY23-Q3 Shared R&D and Product Org OKR Planning](https://gitlab.com/gitlab-com/Product/-/issues/4295) and the VPP reviews the proposed OKRs with the CEO
+     - Product Operations informs Product team members that Q3 OKR planning has begun by tagging them into this issue, highlighting that it is recommended for Product Managers to review and activate their [Product Group](https://about.gitlab.com/handbook/product/product-processes/#quad--infra--security-product-group-dris) to begin ideation on their Q4 KRs at this time. 
+
+#### OKR Collaboration by the Product Team
+
+- **3 weeks** prior to the start of the new quarter, the CEO approves the Shared R&D OKRs and Product organization specific OKRs. Product Operations works with the VPP and Section leads to ensure both the  Shared R&D and Product organization specific OKRs in [FY23-Q3 Shared R&D and Product Org OKR Planning](TBD) are updated as appropriate and tags in the teams for alignment and to finalize ownership of the KRs
+- **2 weeks** prior to the start of the new quarter:
+     - Product Operations ports the finalized Shared R&D and Product organization OKRs approved by the CEO, CTO and VPP from the planning issue into Ally.io. Product Operations assigns the Objectives and Key Results to the designated owners, as specified by in the issues
+     - Product Operations aligns the Shared R&D OKRs and Product organization OKRs to their corresponding parent-level OKRs in Ally.io so everything cascades from the Company Objectives set by the CEO and Chief of Staff to the CEO. 
+     - Product Operations notifies all Product that approved Shared R&D and Product organization OKRs are in Ally.io, requesting they review all OKRs in Ally and Product Managers work with their Product Group to add any additional KRs they'd like to contribute
+     - Product Managers initiate the planning process. They will work with their Product Group to identify KRs supporting Shared R&D Objectives owned by the VPP and CTO, as this is the agreed-upon priority across the Product and  Engineering teams. For any Product organization specific OKRs, they will work as needed with their manager or other Product team members. 
+     - Product Managers may create KRs not aligned to the existing quarter's OKRs as long as it doesn't conflict with or create bandwidth challenges with the approved upon Shared R&D and Product organization OKRs for the quarter. 
+     - If product managers go this route, they need to get alignment/approval from both their manager and their Product Group.
+- Product Managers will add any additional KRs to Ally.io
+          - For guidance, please check out [how to use ally.io](#how-to-use-allyio).
+     - In some cases, GPMs may want to act as KR owners, working with the Product Manager and Product Group to add additional KRs to Ally.io.
+- **1 week** prior to the start of the new quarter:
+     - the VPP and CTO record a video highlighting and discussing the Shared R&D OKRs
+          - Product Operations adds video to relevant handbook pages and shares across relevant Slack channels
+     - Product Operations reminds all  Directors and GPMs to review  OKRs added to Ally by their direct reports, to ensure any final modifications and additions are made prior to the beginning of the quarter
+- **1 week** after the end of the quarter:
+   - Product Operations asks Product team to ensure previous quarter scores are finalized  and their KRs closed by end of week in Ally.io
+   - Product Operations asks VPP, Directors, and Group Product Managers to run OKR retrospectives for their teams for the previous quarter, leveraging [the OKR Retrospective issue template](https://gitlab.com/gitlab-com/Product/-/issues/new?issuable_template=OKR-Retrospective).
+- **3 weeks** after the end of the quarter:
+   - Product Operations asks VPP, Directors, and Group Product Managers to review their OKR retrospectives and share conclusions in the `#product` Slack channel or [PM Weekly](https://docs.google.com/document/d/1Kp8T4YrfmSvqbNlAKJw4pB4dPkV5-AjMT0wVvsxMJUY/edit#heading=h.avveod33mpb) if appropriate and helpful for the rest of the team.    
+
 ## FY23 Q2
 
 FY23 Q2 Shared R&D OKR Overview by Engineering and Product Leadership
