Make the EP team members list dynamic again

--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -108,15 +108,7 @@ graph TD
 
 ## Team Members
 
-| Name| Title|
-|------------|
-| [Alina Mihaila](https://gitlab.com/alinamihaila)| Senior Backend Engineer, Engineering Productivity|
-| [Ash McKenzie](https://gitlab.com/ashmckenzie)| Staff Backend Engineer, Engineering Productivity|
-| [David Dieulivol](https://gitlab.com/ddieulivol)| Senior Backend Engineer, Engineering Productivity|
-| [Jennifer Li](https://gitlab.com/jennli)| Acting Engineering Manager, Engineering Productivity|
-| [Jen-Shin Lin](https://gitlab.com/godfat-gitlab)| Senior Backend Engineer, Engineering Productivity|
-| [Nao Hashizume](https://gitlab.com/nao.hashizume)| Backend Engineer, Engineering Productivity           |
-| [Rémy Coutable](https://gitlab.com/rymai)| Principal Engineer, Quality|
+<%= direct_team(manager_role: 'Acting Manager, Senior Backend Engineer, Engineering Productivity', extra_slugs: ['remy-c']) %>
 
 ### Stable Counterpart
 
@@ -129,7 +121,7 @@ graph TD
 Engineering Productivity has an alternating [weekly team meeting schedule](https://docs.google.com/document/d/1yzHuosvykzb_kaldjGP9I6wxpNpMXdNEvEFBkHyZpXs/edit#) to allow for all team members to collaborate in times that work for them. 
 
 - Week 1 is Tuesdays 1200 UTC, 0400 PST
-- Week 2 is Tuesdays 1530 PST,  1130 UTC
+- Week 2 is Tuesdays 2330 UTC, 1530 PST
 
 ### Showcase
 
