--- a/product/product-principles/index.html.md.erb
+++ b/product/product-principles/index.html.md.erb
@@ -683,8 +683,10 @@ As an [example](https://gitlab.com/gitlab-com/legal-and-compliance/-/issues/815)
 
 Exceptions to this principle are considered in limited circumstances - if a product or feature is a differentiator in the market, adopting a descriptive name risks it getting lost in the _sea of same_. Here, a distinctive name may be justified. To discuss an exception, reach out to [#marketing](https://app.slack.com/client/T02592416/C0AKZRSQ5) in Slack.
 
-#### Use prepositions when referring to third-party products and services
-When naming a GitLab extension, plugin, app, or integration for a third-party product or service, either include the third-party product/service name with a preposition like `for`, or don't include the third-party product/service name at all. Including a preposition is important because, from a trademark law perspective, we need to indicate that the third party isn't officially affiliated with the extension/plugin/app/integration. For example, our [integration with Jira Cloud](https://docs.gitlab.com/ee/integration/jira/connect-app.html) is called `GitLab.com for Jira Cloud`. 
+#### Use prepositions when referring to third-party products and services in names
+When naming a GitLab extension, plugin, app, or integration for a third-party product or service (a "tool"), either include the third-party service name with a preposition like `for`, or don't include it at all. A preposition is important as it indicates that the third party isn't officially affiliated with the tool. For example, our [integration with Jira Cloud](https://docs.gitlab.com/ee/integration/jira/connect-app.html) is called `GitLab.com for Jira Cloud`.
+
+Provided we use the tool's full name in marketing materials and technical documentation, as exceptions to this general principle we can: (1) refer to the tool solely by the third-party service name in places where we list GitLab's tools in product; and (2) refer to the tool solely as "GitLab" in the third-party product's app directory. For example, we refer to the GitLab for Slack app as "Slack" in our lists of GitLab integrations, and as "GitLab" in the [Slack App Directory] (https://gitlab.slack.com/apps/A676ADMV5-gitlab?tab=more_info).
 
 ### Next Generation
 
