--- a/development/sec/index.html.md.erb
+++ b/development/sec/index.html.md.erb
@@ -27,6 +27,7 @@ The following teams comprise the sub-department:
   - Dynamic Analysis group - [handbook](/handbook/engineering/development/sec/secure/dynamic-analysis/)
   - Static Analysis group - [handbook](/handbook/engineering/development/sec/secure/static-analysis/)
   - Vulnerability Research group - [handbook](/handbook/engineering/development/sec/secure/vulnerability-research/)
+  - API Security - [handbook](https://about.gitlab.com/handbook/engineering/development/sec/secure/api-security)
 
 It is important to delineate who the EM and PM DRIs are for every functionality, especially where this may not be obvious. This is documented on a dedicated [delineation page](delineate-sec.html).
 
