Updating Channel Sales Title to Align to Company Title Structure

--- a/job-families/sales/channel-sales-manager/index.html.md.erb
+++ b/job-families/sales/channel-sales-manager/index.html.md.erb
@@ -47,12 +47,12 @@ The Channel Sales Manager is a [grade 8](/handbook/total-rewards/compensation/co
 
 ## Levels
 
-## Junior Channel Sales Manager
-The Junior Channel Sales Manager share the same requirements and responsibilities outlined above, but typically join with less relevant experience, alternate background and/or less industry exposure than an intermediate Channel Sales Manager. The Junior Channel Sales Manager will drive growth ARR through services capacity and capability to drive customer adoption and usage of the GitLab platform. Additionally, the Junior Channel Sales Manager will drive and increase new customer ARR through their relationships, service engagements, and knowledge of accounts. 
+## Associate Channel Sales Manager
+The Associate Channel Sales Manager share the same requirements and responsibilities outlined above, but typically join with less relevant experience, alternate background and/or less industry exposure than an intermediate Channel Sales Manager. The Associate Channel Sales Manager will drive growth ARR through services capacity and capability to drive customer adoption and usage of the GitLab platform. Additionally, the Associate Channel Sales Manager will drive and increase new customer ARR through their relationships, service engagements, and knowledge of accounts. 
 
 ### Job Grade
 
-The Junior Channel Sales Manager is a [grade 8](/handbook/total-rewards/compensation/compensation-calculator/#gitlab-job-grades).
+The Associate Channel Sales Manager is a [grade 8](/handbook/total-rewards/compensation/compensation-calculator/#gitlab-job-grades).
 
 ### Responsibilities
 
