Updated link to UK contracts on contracts probation periods handbook page

--- a/people-group/contracts-probation-periods/index.html.md.erb
+++ b/people-group/contracts-probation-periods/index.html.md.erb
@@ -105,11 +105,11 @@ _All team members in New Zealand are employed by GitLab Australia PTY Ltd. This 
 
 ### United Kingdom
 
-- [GitLab UK Ltd, without OTE](https://docs.google.com/document/d/1hIfMDgMBpN8QVbddsy45Eb_vhdC8j1ujq_SaPOKZVi0/edit?usp=sharing)
-- [GitLab UK Ltd, with OTE & Draw](https://docs.google.com/document/d/1GAI4iMQRxyJiOmXmhtDoMMqKFtWBPtpNpCNLqLsqR3k/edit)
-- [GitLab UK Ltd, with OTE](https://docs.google.com/document/d/1bB_NS8fkRKwLrlwjjaZ6UIW3AhYtP_qnjaM0-4niPu0/edit?usp=sharing)
-- [GitLab UK Ltd., with OTE or Director and signing bonus](https://docs.google.com/document/d/1KHMPcTmpOYMTja17oOJf13umFCIjQiO4YuRT7ShSW60/edit#heading=h.gjdgxs)  
-- [GitLab UK Ltd., without OTE and with signing bonus)](https://docs.google.com/document/d/15uX3MMPRfc7Wr9RqJWrSKMBHrXmZ8MNYKyb5tCtCHHU/edit#heading=h.gjdgxs)
+- [GitLab UK Ltd, without OTE](https://docs.google.com/document/d/1VWmo4QZcgsQJriC4NdxEF3kgHrYFUtRQPlmkkSj5Lu8/edit)
+- [GitLab UK Ltd, with OTE & Draw](https://docs.google.com/document/d/19ZUxDtCGxZo1hMPYYn9RUiqsWSO-Ns9fLMaD3hWoyoU/edit#)
+- [GitLab UK Ltd, with OTE](https://docs.google.com/document/d/1B6sJjSSdOsXltvJ6I0Al2TeFUcN_0iTFqg4YSmbtkug/edit#)
+- [GitLab UK Ltd., with OTE or Director and signing bonus](https://docs.google.com/document/d/1wOUfNb4gECXjVw75zuspRYqbIpdYC9mYjOFSQnlzHwg/edit#)  
+- [GitLab UK Ltd., without OTE and with signing bonus)](https://docs.google.com/document/d/1IaWUWsxZZiCHlqxfndGgSiyxfy6uDsOzItQ5Esrrb9U/edit#)
 
 ### France
 
