Remove blueprint terminology

--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -76,8 +76,6 @@ Other strategic initiatives to achieve this vision are driven by the needs of en
 
 The [**Infrastructure Library**][library] contains documents that outline our thinking about the problems we are solving and represents the ***current state*** for any topic, playing a significant role in how we produce technical solutions to meet the challenges we face.
 
-**Blueprints** scope out our initial thinking about specific problems and issues we are working on. **Designs** outline the specific architecture and implementation.
-
 ## Dogfooding
 
 The Infrastructure department uses GitLab and GitLab features extensively as the main tool for operating many [environments](/handbook/engineering/infrastructure/environments/), including GitLab.com.
@@ -198,11 +196,11 @@ This daily meeting has been discontinued as of Oct 17, 2022. Improved maturity o
 Reliability discussions and firedrills is a **purely technical meeting** for Infrastructure ICs to discuss technical topics. The agenda is driven by:
 1. Issues that are proposing Firedrill exercises
 2. Sharing of technical knowledge (demos or overviews) from Corrective Actions from Incident Reviews.
-3. Blueprints, Designs or Readiness reviews from the [readiness repo](https://gitlab.com/gitlab-com/gl-infra/readiness/-/tree/master/library)
+3. Readiness reviews from the [readiness repo](https://gitlab.com/gitlab-com/gl-infra/readiness/-/tree/master/library)
 
 Project status discussions are strictly out of bounds in this (the only exception being the resolution of technical dependencies).
 
-While open discussions are welcome, it is strongly recommended that blueprints and designs are used as the source of agenda items. This allows everyone gain the required context–before the meeting starts–for an engaging conversation.
+While open discussions are welcome, it is strongly recommended that written designs are used as the source of agenda items. This allows everyone gain the required context–before the meeting starts–for an engaging conversation.
 
 During discussions, it is ok to point shortcomings for a given design. This is one way in which we expand our angle of vision and learn. In general, however, **make it a point to provide alternatives**.
 
