--- a/development/index.html.md.erb
+++ b/development/index.html.md.erb
@@ -306,20 +306,20 @@ The following is a non exhaustive list of daily duties for engineering directors
 1. Holiday Emergency Contact Rotations
 1. [Review and approve security approvals](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/12296) for the GitLab project when required and informing the security engineering team when a security risk is accepted rather than being resolved prior to approval.
 
-#### Holiday Coverage of Year 2021
-The schedule below covers the period from 2021-12-20 to 2022-01-03. To reach the emergency contacts, please send Slack as well as Text(when possible) messages for timely responses. The phone numbers can be found in Slack profiles.
+#### Holiday Coverage of Year 2022
+The schedule below covers the period from 2022-12-19 to 2023-01-02. To reach the emergency contacts, please send Slack as well as Text(when possible) messages for timely responses. The phone numbers can be found in Slack profiles.
 
 | Name | Time Zone | Available Dates |
 | :--- | :-------: | :-------------: |
-| Chun Du | GMT-8 (Portland, OR) | December 20 - January 3 |
-| Craig Gomes | GMT-8 (Portland, OR) | December 20 - January 3 |
-| Sam Goldstein | GMT-8 (Portland, OR) | December 20 - January 3 |
-| Wayne Haber | GMT-5 (NYC) | January 3 |
-| Todd Stadelhofer | GMT-8 (Portland, OR) | December 27 - January 3 |
-| Christopher Lefelhocz | GMT-6 (San Antonio, TX) | 2021-12-20 - 2021-12-22, 2021-12-25 - 2021-12-29, 2022-01-02 |
-| Darva Satcher | GMT-5 | December 24,27,31 |
-| Phil Calder | GMT+13 (Wellington, New Zealand) | December 20 - December 23 |
-| Tim Zallmann | GMT+1 (Vienna, Austria) | December 20 - December 23 |
+| Chun Du | GMT-8 (Portland, OR) | 2022-12-19 ~ 2023-01-02  |
+| Sam Goldstein | GMT-8 (Portland, OR) | December 19 - 26 (note you can also [notify me via Pagerduty](https://gitlab.com/gitlab-com/ops-sub-department/page-ops-leaders/-/blob/main/README.md)  |
+| Wayne Haber | GMT-5 (NYC) | Available for escalations via SMS number in Slack profile.  Also, see [coverage plan](https://gitlab.com/gitlab-com/www-gitlab-com/-/issues/14194#wayne-coverage-plan) |
+| Christopher Lefelhocz | GMT-6 (San Antonio, TX) | 2022-12-19 - 2022-12-22, 2022-12-27 - 2023-01-02 |
+| Darva Satcher | GMT-5 | 2022-12-23 - 2023-01-06 |
+| Phil Calder | GMT+13 (Wellington, New Zealand) | 2022-12-19 ~ 2022-12-21 |
+| Tim Zallmann | GMT+1 (Vienna, Austria) | 2022-12-19 - 2022-12-22, 2022-12-28 - 2012-12-30 (for needed EMEA emergency coverage) |
+| Jerome Ng | GMT-8 (Vancouver, Canada) | 2022-12-19 ~ 2023-01-02  |
+| Michelle Gill | GMT-6 (Texas, USA) | 2022-12-19 - 2022-12-23 |
 
 ### Developing and Tracking OKRs
 
