Add information about Certify contractors (Service Desk)

--- a/development/dev/plan/certify/index.html.md.erb
+++ b/development/dev/plan/certify/index.html.md.erb
@@ -165,6 +165,40 @@ When you pick something to work on, please:
 [request for it to be scheduled]: /handbook/engineering/workflow/#requesting-something-to-be-scheduled
 [issue bash]: /community/issue-bash/
 
+## Contractors for Service Desk (starting Q4 FY23)
+
+In December 2022 we started hiring contractors who will be working on Service Desk. In total, we'll hire 10 contractors with the following distribution:
+
+| Quarter | Role | Quantity|  
+| ------ | ------ |------ |
+|2023 Q4 | Backend Engineer |  2  |
+|2023 Q4 | Frontend Engineer |  1  |  
+|2023 Q4 | Senior Backend Engineer |  2  |  
+|2023 Q4 | Senior Frontend Engineer |  1  |  
+|2023 Q4 | Scrummaster  |  1  |
+|2023 Q4 | UX Designer |  1  |      
+|2024 | Product Manager  |  1  |      
+|2024 | Engineering Manager  |  1  |  
+| 2024 | Engineering | TBD |
+
+NOTE: FY 2024 planning is underway and should be finalized by January 2024. Data in this table represents our proposal.
+
+
+They will be working on Service Desk issues with `Contractor Contribution` label. The issues will be linked to the [Accelerate Service Desk](https://gitlab.com/groups/gitlab-org/-/epics/9452).
+
+### Work coordination
+
+For filtering issues to work on, we use [Issue List filtered by labels](https://gitlab.com/groups/gitlab-org/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Contractor%20Contribution&label_name%5B%5D=Category%3AService%20Desk&first_page_size=20) and for the development workflow there is [Service Desk Improvements issue Board](https://gitlab.com/groups/gitlab-org/-/boards/5085983).
+
+Weekly sync calls between Certify PM & EM and Scrummaster joining as a contractor will be scheduled. Agenda for these calls can be found [here](https://docs.google.com/document/d/1AsuekuG2mcy9Hs4AQ9WPLztobt9PICwyo4tU4JMK3b8/edit).
+
+### Service Desk transition 
+
+While contractors are being hired for Certify in the beginning and will start on this group the plan is to move them to the Monitor stage. 
+
+Details about the transition can be found in the [transition plan issue](https://gitlab.com/gitlab-com/Product/-/issues/5171#note_1202172208).
+
+
 ## Useful links
 
 <%= partial("handbook/engineering/development/dev/plan/useful_links", locals: { board: { name: 'Plan:Product Planning', url: 'https://gitlab.com/groups/gitlab-org/-/boards/1569369?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=devops%3A%3Aplan&not[label_name][]=group%3A%3Aproject%20management' }}) %>
