--- a/product/product-okrs/index.html.md.erb
+++ b/product/product-okrs/index.html.md.erb
@@ -50,7 +50,7 @@ This section will be updated by Product Operations quarterly.
 
 - [FY23 Q4 Product Division OKRs](https://gitlab.com/groups/gitlab-com/-/epics/2050)
 - [FY23 Q4 OKR overview video](https://youtu.be/lnaKB1P28S4)
-- [FY23 Q4 feedback issue](ADD LINK)
+- [FY23 Q4 feedback issue](https://gitlab.com/gitlab-com/Product/-/issues/5212)
 
 #### Past Quarters
 
