--- a/security/index.html.md.erb
+++ b/security/index.html.md.erb
@@ -678,40 +678,17 @@ For more information on Travel Mode and how it works, see the [AgileBits blog].
 
 ### GitLab Security Awareness Training
 
-GitLab Security Awareness Training is a handbook first GitLab-customized training + policy reviews provided via [ProofPoint](https://gitlab.ws01-securityeducation.com/). GitLab requires all new hires to complete [New Hire security orientation training](https://about.gitlab.com/handbook/security/security-assurance/governance/sec-training.html#gitLab-security-awareness-training) as part of the onboarding process and annual training there after.
+GitLab requires all new hires to complete [New Hire security orientation training](https://about.gitlab.com/handbook/security/security-assurance/governance/sec-training.html#gitLab-security-awareness-training) as part of the onboarding process and [annual training](https://about.gitlab.com/handbook/security/security-training/) there after.
 
-New Hire Security training will be automatically assigned to you on Day 1 of orientation as soon as you access the ProofPoint tile via Okta. Training is required to be completed by end of day.
+New Hire security training will be automatically assigned to you on day 1 of orientation as soon as you access the [ProofPoint](https://gitlab.ws01-securityeducation.com/) tile via Okta. Training is required to be completed within your first 30 days.
 
-The purpose of the [annual training](/handbook/security/security-assurance/governance/sec-awareness-training.html) is to mature our internal posture through regular training while satisfying external regulatory requirements. We are trying to make it fun, engaging and not time-consuming.
-
-GitLab security training has been developed by [GitLab Security](/handbook/security/)'s [Governance Program](/handbook/security/security-assurance/governance/). The goal of the training is to:
-
-1. Make all GitLab team-members aware of the GitLab Security team, and familiarize them with our efforts, team structure, and people.
-1. Make all GitLab team-members aware of the importance of their role in securing GitLab on a daily basis, and to empower them to make the right decisions with security best-practices.
-1. Familiarize all new GitLab team-members with security-related situations that they might encounter during their tenure with the company.
-1. Help all GitLab team-members internalize and reinforce the idea that reaching out to Security is an encouraging practice.
-
-* Special topics covered:
-  * [Suspected phishing](/handbook/security/#phishing-tests)
-  * [Acceptable Use](/handbook/people-group/acceptable-use-policy/)
-  * [Device Lost or Stolen?!](#panic-email)
-    * Slack: the `/security` Slack command
-    * Email (Emergencies-ONLY): panic@gitlab.com
-  * [Data Classification](/handbook/security/data-classification-standard.html)
-  * [No Red Data on Unapproved Locations](/handbook/people-group/acceptable-use-policy/#security-and-proprietary-information)
+The purpose of the [annual training](/handbook/security/security-assurance/governance/sec-awareness-training.html) is to mature our internal posture through regular training while satisfying external regulatory requirements. The training is meant to be fun, engaging and not time-consuming.
 
 * Review [Security Practices](/handbook/security/#security-process-and-procedures-for-team-members) for a list of security process and procedures that you can consult at any time.
 
-#### Training Feedback
-You are strongly encouraged to engage the team behind the training and provide feedback, or ask any questions related to the content of the training. You can do that through:
-1. Monthly office hours held by the SecOps team on third Friday of each month. There are two sessions for both EMEA and APAC-friendly timeslots. Please see the **GitLab Team Meetings** calendar for current times.
-1. A quarterly-reviewed GitLab [feedback issue](https://gitlab.com/gitlab-com/gl-security/security-assurance/governance/security-awareness-training/security-awareness-training-program/-/issues/13) for New Hire training.
-1. Annual security awareness training [feedback issue](https://gitlab.com/gitlab-com/gl-security/security-assurance/governance/security-awareness-training/security-awareness-training-program/-/issues/16).
-1. Sending an email to security-training@gitlab.com.
+#### Phishing Simulations
 
-#### Phishing Tests
-
-GitLab conducts routine [phishing tests](/handbook/security/security-assurance/governance/phishing.html) at a minimum of once per quarter. All
+GitLab conducts routine [phishing simulations](/handbook/security/security-assurance/governance/phishing.html) at a minimum of once per quarter. All
 team members may occasionally receive emails that are designed to look like
 legitimate business-related communications but will in actuality be simulated
 phishing attacks. Real phishing attacks are designed to steal credentials or
