--- a/sites/handbook/source/handbook/marketing/project-management-guidelines/groups/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/project-management-guidelines/groups/index.html.md.erb
@@ -62,7 +62,7 @@ graph LR
   A --> C(["Growth Marketing &#128101;"]):::GRP
   A --> D(["Revenue Marketing &#128101;"]):::GRP
   A --> E(["Demand Generation &#128101;"]):::GRP
-  A --> F(["Strategic Marketing &#128101;"]):::GRP
+  A --> F(["Product and Solution Marketing &#128101;"]):::GRP
 
 classDef GRP fill:#D8BFD8, stroke: #333
 classDef GRP_NMKTG fill:#F7ECF7, stroke: #333, stroke-dasharray: 5, 5
@@ -79,7 +79,7 @@ graph LR
   A --> C(["Growth Marketing &#128101;"]):::GRP
   A --> D(["Revenue Marketing &#128101;"]):::GRP
   A --> E(["Demand Generation &#128101;"]):::GRP
-  A --> F(["Strategic Marketing &#128101;"]):::GRP
+  A --> F(["Product and Solution Marketing &#128101;"]):::GRP
   B --> BA("Corporate Events &#9881;"):::PRJ
   B --> BB("Community Relations &#9881;"):::PRJ
   B --> BC("Corporate Communications &#9881;"):::PRJ
