--- a/sites/handbook/source/handbook/marketing/project-management-guidelines/milestones/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/project-management-guidelines/milestones/index.html.md.erb
@@ -27,7 +27,7 @@ Milestones are **very useful** when tracking the progress of multiple issues and
 
 Here are two examples of milestones:
 
-1. [Strategic Marketing Quarterly Milestone](https://gitlab.com/gitlab-com/marketing/product-marketing/-/milestones/6) - showing the bulk of strategic marketing work for a given quarter.
+1. [Product and Solution Marketing Quarterly Milestone](https://gitlab.com/gitlab-com/marketing/product-marketing/-/milestones/6) - showing the bulk of strategic marketing work for a given quarter.
 1. [UseCase Monthly Sprint Milestone](https://gitlab.com/gitlab-com/marketing/product-marketing/-/milestones/12)
 
 ### Key things to know
@@ -68,7 +68,7 @@ For example:
 
 - A **project** milestone in the **"Revenue Marketing"** project should be named:
   - `**rm_**Milestone Name`
-- A **group** milestone in the **"Strategic Marketing"** group should be named:
+- A **group** milestone in the **"Product and Solution Marketing"** group should be named:
   - `**sm_**Milestone Name`
 
 This will help in two ways.  First, when looking at lists of milestones, they can be sorted and put the related milestones together.   Second, in issues, when adding a milestone, you can search by name, which will make it easy to find the right subset of milestones (either for the project or group)
