--- a/sites/handbook/source/handbook/marketing/project-management-guidelines/labels/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/project-management-guidelines/labels/index.html.md.erb
@@ -54,7 +54,7 @@ group-level labels include:
 1. Executive Interest labels (e.g. **CMO**, **CEO**, etc.). This indicates the epic or issue is an executive interest item and enables reporting and visibility of related issues and epics.
 1. Executive Priority (**CMO-priority::1**, **CMO-priority::2**, etc.). These labels help the organization understand the priority of issues - mainly used by CMO Staff to communicate priority on CMO”s behalf.
 1. Executive Theme (**CMO::Agility**, **CMO::Efficiency**, **CMO::Commit**, etc.). This small list of scoped labels help to flag specific CMO Interest themes based on top level initiatives and areas of focus
-1. “Team” Labels. (**Strategic Marketing**, **Corporate Marketing**, etc.). This allows high-level work tracking within the greater Marketing organization.
+1. “Team” Labels. (**Product and Solution Marketing**, **Corporate Marketing**, etc.). This allows high-level work tracking within the greater Marketing organization.
 
 If you are unsure whether you should create a group-level label or a project-level Label, **err on the side of caution and create a project-level Label**.
 You can always promote it to a group-level Label in the future.
@@ -95,7 +95,7 @@ rather than depending on users to remove invalid labels as they assign new ones.
 ### Automate Label Hygiene
 
 The Triage Bot is an open source project that makes it possible to automate many issue and merge request hygiene tasks to ensure that your projects
-are more consistently following a process. Use the [Triage Bot scripts](/handbook/marketing/strategic-marketing/getting-started/105/)
+are more consistently following a process. Use the [Triage Bot scripts](/handbook/marketing/brand-and-product-marketing/product-and-solution-marketing/getting-started/105/)
 to minimize the impact of human error, automating proper Labeling and workflow. Common uses of the Triage Bot include identifying missing or improperly
 applied Labels, notifying issue or merge request owners of Label-related problems, and applying Labels based on predefined criteria.
 
