--- a/board-meetings/index.html.md.erb
+++ b/board-meetings/index.html.md.erb
@@ -21,7 +21,7 @@ title: "Board of Directors and Corporate Governance"
 ### Audit Committee
 
 - **Chairperson:** Karen Blasing
-- **Members:**  Godfrey Sullivan, Sunny Bedi
+- **Members:**  Mark Porter, Sunny Bedi
 - **Management DRI:** Chief Financial Officer
 - **Internal Management Members:** Chief Legal Officer, Chief Executive Officer, VP of Security (for Cyber security) 
 
