Combine naming guidelines

--- a/product/product-principles/index.html.md.erb
+++ b/product/product-principles/index.html.md.erb
@@ -674,6 +674,7 @@ If adding code directly to GitLab isn't an option, we encourage third-parties to
 _Note: GitLab does support [plugins that respond to system hooks](https://docs.gitlab.com/ee/administration/file_hooks.html), which tie directly to application events and are primarily used for administrative purposes such as auditing, logging, and other administrative tasks._
 
 ### Product and feature naming guidelines
+
 #### Give products and features descriptive, not distinctive, names
 GitLab is a DevOps Platform, not a collection of DevOps point solutions; the naming of GitLab products and features should reflect this. Adopting descriptive names brings other advantages:
 - It's [efficient](/handbook/values/#efficiency). Descriptive names are generally not eligible for trademark registration, avoiding the time, effort, and expense of clearing, filing, and maintaining trademark registrations.
@@ -686,7 +687,9 @@ Exceptions to this principle are considered in limited circumstances - if a prod
 #### Use prepositions when referring to third-party products and services in names
 When naming a GitLab extension, plugin, app, or integration for a third-party product or service (a "tool"), either include the third-party service name with a preposition like `for`, or don't include it at all. A preposition is important as it indicates that the third party isn't officially affiliated with the tool. For example, our [integration with Jira Cloud](https://docs.gitlab.com/ee/integration/jira/connect-app.html) is called `GitLab.com for Jira Cloud`.
 
-Provided we use the tool's full name in marketing materials and technical documentation, as exceptions to this general principle we can: (1) refer to the tool solely by the third-party service name in places where we list GitLab's tools in product; and (2) refer to the tool solely as "GitLab" in the third-party product's app directory. For example, we refer to the GitLab for Slack app as "Slack" in our lists of GitLab integrations, and as "GitLab" in the [Slack App Directory] (https://gitlab.slack.com/apps/A676ADMV5-gitlab?tab=more_info).
+Provided we use the tool's full name in marketing materials and technical documentation, as exceptions to this general principle we can: (1) refer to the tool solely by the third-party service name in places where we list GitLab's tools in product; and (2) refer to the tool solely as "GitLab" in the third-party product's app directory. For example, we refer to the GitLab for Slack app as "Slack" in our lists of GitLab integrations, and as "GitLab" in the [Slack App Directory](https://gitlab.slack.com/apps/A676ADMV5-gitlab?tab=more_info).
+
+For more guidance on the feature naming process, see [naming features](https://about.gitlab.com/handbook/product/gitlab-the-product/#naming-features).
 
 ### Next Generation
 
