Update Internal Management Reference for Acting CISO

--- a/board-meetings/index.html.md.erb
+++ b/board-meetings/index.html.md.erb
@@ -23,7 +23,7 @@ title: "Board of Directors and Corporate Governance"
 - **Chairperson:** Karen Blasing
 - **Members:**  Mark Porter, Sunny Bedi
 - **Management DRI:** Chief Financial Officer
-- **Internal Management Members:** Chief Legal Officer, Chief Executive Officer, VP of Security (for Cyber security) 
+- **Internal Management Members:** Chief Legal Officer, Chief Executive Officer, Acting CISO 
 
     \*[Audit Committee Charter](/handbook/board-meetings/committees/audit/)
 
