Correct markdown typo

--- a/support/index.html.md.erb
+++ b/support/index.html.md.erb
@@ -180,7 +180,7 @@ The Support Team, Product areas and requirements of our customers continued thei
 
 ### Scaling Support
 
-The continued growth of the support team provides an opportunity to review how best to deliver results to our customers. This will include both looking towards new support offerings and ensuring our existing offerings contribute towards GitLab value-proposition. As we [strengthen the team](#strengthen-the-team], we also need to look towards a larger scale. In FY24 we will:
+The continued growth of the support team provides an opportunity to review how best to deliver results to our customers. This will include both looking towards new support offerings and ensuring our existing offerings contribute towards GitLab value-proposition. As we [strengthen the team](#strengthen-the-team), we also need to look towards a larger scale. In FY24 we will:
 
    - Refine the delivery of our existing support plan (Premium Support)
    - With eyes focused on [customer results](#customer-results), investigate new / differentiated support offerings
