301 redirects in redirects.yml

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -225,7 +225,7 @@ There are several examples of these types of direction pages today:
 1. [Monorepo Product Direction](/direction/monorepos/)
 1. [Versioned Dependencies Direction](/direction/versioned-dependencies/)
 1. [AutoDevops Direction](/direction/configure/auto_devops/)
-1. [Deployment Direction](/direction/deployment/)
+1. [Deployment Direction](/direction/delivery/)
 
 The steps for creating and managing a cross-section or stage direction are: 
 
