301 redirects in redirects.yml

--- a/job-families/product/product-manager/index.html.md.erb
+++ b/job-families/product/product-manager/index.html.md.erb
@@ -287,7 +287,7 @@ We're looking for product managers that can help us work on the next generation 
 
 ### Release (CD)
 
-We're looking for product managers that can help us work on the future of the [Release stage](https://about.gitlab.com/direction/release/) and [deployment](https://about.gitlab.com/direction/deployment/) capabilities at GitLab. The PM will work on building out continuous delivery (CD), release orchestration, features flags, and more.
+We're looking for product managers that can help us work on the future of the [Release stage](https://about.gitlab.com/direction/release/) and [deployment](https://about.gitlab.com/direction/delivery/) capabilities at GitLab. The PM will work on building out continuous delivery (CD), release orchestration, features flags, and more.
 
 #### Requirements
 
