--- a/development/ops/release/index.html.md.erb
+++ b/development/ops/release/index.html.md.erb
@@ -16,7 +16,7 @@ The Release Group is responsible for developing features that relate to the [Rel
 Continuous Delivery and Release Automation.
 
 For an understanding of what this stage encapsulates, take a look at [the product
-vision](/direction/deployment/).
+vision](/direction/delivery/).
 
 For an understanding of our UX Vision and Strategy, take a look at the [Release UX Strategy](/handbook/product/ux/stage-group-ux-strategy/release/) or the [Release 3-year vision mock-ups](https://gitlab.com/groups/gitlab-org/-/epics/3825).
 
@@ -52,7 +52,7 @@ define quarterly Objectives & Key Results (OKRs) to set and track measureable te
 
  * [Issue Tracker](https://gitlab.com/groups/gitlab-org/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Arelease)
  * [Slack Channel](https://gitlab.slack.com/archives/s_release)
- * [Direction](/direction/deployment/)
+ * [Direction](/direction/delivery/)
 
 ## How to work with us
 
