Add escalation details to How to contact information on Delivery page

--- a/infrastructure/team/delivery/index.html.md.erb
+++ b/infrastructure/team/delivery/index.html.md.erb
@@ -191,13 +191,7 @@ The primary customer of the System team is the Delivery::Orchestration team.
 | S1/P1 Deployment/Release related issues | `@release-managers` | Slack |
 | Any Priority Deployment/Release related issues | `@gitlab-org/delivery` | GitLab |
 
-Please note that the Delivery team is not currently subject to being on an
-on-call rotation as our operations are normally suspended during off-hours.
-Release Managers have a follow the sun coverage during working days. If we are
-unreachable, please reach out to one of the [Engineering
-Managers](#team-members) using their contact information located in their Slack
-profile.
-
+Release Managers have a weekday follow-the-sun rotation and can be reached via the '@release-managers' handle on Slack. For weekend support or other escalations please use the [Release Management Escalation](https://gitlab.pagerduty.com/escalation_policies#PPDMKX1) to reach Delivery Leaders. 
 
 ### Project Management
 
